# unittests

./: .clangd  CMakeLists.txt  LICENSE  README.md  rebuild.sh  test_access.cpp  test_ci_string.cpp  test_fstream.cpp  test_hello.cpp  test_main.cpp  test_refref_param.cpp  test_stat.cpp  test_utime.cpp
.github/workflows/: unix-build-and-test.yml  windows-build-and-test.yml
